[package]
name = "aoc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
dotenv = "0.15.0"
fs_extra = "1.3.0"
itertools = "0.14.0"
nalgebra = "0.33.2"
ndarray = "0.16.1"
ndarray-linalg = "0.17.0"
once_cell = "1.21.3"
petgraph = "0.8.2"
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["blocking"] }
